# python-fastapi-crud-tutorial

./: .gitignore  AI.md  CLAUDE.md  Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml
src/: Dockerfile  requirements.txt
src/app/: db.py  main.py
src/app/api/: crud.py  notes.py  ping.py
src/fastapi_crud_tutorial/: main.py
src/fastapi_crud_tutorial/api/: notes.py
src/fastapi_crud_tutorial/db/: crud.py  db.py
src/fastapi_crud_tutorial/models/: models.py
src/fastapi_crud_tutorial/schemas/: notes.py
src/tests/: conftest.py  test_notes.py  test_ping.py
tests/: conftest.py  test_notes.py  test_ping.py
